# adorabot

./: .gitignore  9Bt23C1KxNDXMspQ1lPyU89-1h6ONRlW45G07JIoSwQ.ttf:Zone.Identifier  Cargo.toml  NotoSansKR-Regular.otf:Zone.Identifier  README.md  adora.js  adora.ts  adoracassandra.service  all-events-injest.ts  app.js  app.ts  billboardPolls.json  billboardtest.js  bts-stats.js  cassandratest.js  command-thread-injest.ts  config.json  db_schema.cql  docker-compose.yml  ecosystem-kylerhost.config.js  ecosystem.config.js  editDiscordBug.js  example.config.json  index-backup.js  index.html  index.js  keyfile.json  nodemon.json  package-lock.json  package.json  privacy.md  removedytvids.json  requestapi.js  requestthing.js  restart.sh  runtime.js  runtime.ts  schema.cql  shakey.ts  something.html  (+12 more)
commands/: ping.ts
logs/: 2020-7-15.log.txt
modules/: antiLoginQRCode.ts  billboard.ts  billboardCharts.ts  billboardPolls.js  billboardPolls.ts  commandhandler.js  commandhandler.ts  genius.ts  logger.ts  moderation.ts  ping.ts  sendYtEmbed.js  sendYtEmbed.ts  socialmedia.ts  spotify.ts  storeYtStats.js  uploadStatsToBotsGg.ts  userProfile.ts  verboseDiscordLog.js  verboseDiscordLog.ts  youtube.ts
rust-src/: stats-old.rs  stats.rs
spotifygrapher/: runtime.js
src/: .server.ts.swp  adora.ts  app.ts  banInst.ts  banRuntime.ts  debugconnection.ts  deleteslash.ts  registerslash.ts  runserver.ts  runstatsdaemon.ts  server.ts  server.ts.save  testCassandraTime.js  testCassandraTimeBasedIndex.ts  testSyllaTime.ts  testregister.ts  testyoutubekeys.ts  trackedListYtUpdateNames.ts  (+2 more)
(+153 files in other folders)
