[package]
name = "adorabot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = "0.4.7"
tokio = "1.19.2"
json = "0.12.4"
uuid = "1.1.2"
serde_json = "1.0.81"
serde = {version = "1.0.137", features = ["derive"] }

[[bin]]
name="stats"
path = "rust-src/stats.rs"
